--- a/src/About/About.css
+++ b/src/About/About.css
@@ -21,7 +21,6 @@ body{
     color: text;
 }
 section{
-    min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
 .home{
@@ -32,6 +31,12 @@ section{
 .home-img img{
     width: 35vw;
     object-fit: cover;
+    border-radius: 50%;
+    border: 0.5px solid var(--main-color);
+    padding: 0.5px;
+    width: 50rem;
+    height: 50rem;
+    margin-left: 20px;
 }
 .home-content h3{
     font-size: 3.2rem;
