--- a/src/screen/Portofolio/Portofolio.css
+++ b/src/screen/Portofolio/Portofolio.css
@@ -2,6 +2,9 @@
     display: flex;
     padding-top: 20px;
     flex-wrap: wrap;
+    background: #f7f7f7;
+    padding-left: 130px;
+    padding-bottom: 20rem;
 }
 .portofolio{
     width: 15%;
@@ -9,10 +12,10 @@
     padding: 10px 12px;
     border: 1px solid #cce7d0;
     border-radius: 25px;
+    background-color: #fff;
     cursor: pointer;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     margin: 20px;
-    position: relative;
 
 }
 
