--- a/src/screen/Competences/Competence.css
+++ b/src/screen/Competences/Competence.css
@@ -48,19 +48,36 @@ body{
 }
 
 .services-container .services-box{
-    width: 30rem;
-    height: 200px;
+    width: 34rem;
+    height: 150px;
     background-color: var(--second-bg-color);
     margin-right: 20px;
     display: flex;
     flex-direction: row;
     padding-top: 5rem;
+    margin: 10px;
 }
 
 .icon{
     border: 1px solid var(--main-color);
     border-radius: 50%;
     background-color: var(--main-color);
-    height: 80px;
-    width: 80px;
+}
+.titre{
+    color: var(--text-color);
+    font-size: 2.5rem;
+    font-weight: 600;
+    text-align: center;
+    margin-top: -3rem;
+}
+.langage{
+    color: var(--text-color);
+    margin-top: 40px;
+    left: 0px;
+    margin-right: 150px;
+    margin-left: -150px;
+    text-align: center;
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: 450;
 }
